--- a/.github/workflows/publish_to_index.yml
+++ b/.github/workflows/publish_to_index.yml
@@ -14,12 +14,12 @@ on:
         required: false
         type: string
         default: "0.6.14"
-      token:
-        required: true
-        type: string
       index:
         required: true
         type: string
+    secrets:
+      token:
+        required: true
 
 env:
  BRANCH_NAME: ${{ github.head_ref || github.ref_name }} 
@@ -45,4 +45,4 @@ jobs:
         run: uv build
 
       - name: Publish
-        run: uv publish --index ${{ inputs.index }} --token ${{ inputs.token }} --verbose
+        run: uv publish --index ${{ inputs.index }} --token ${{ secrets.token }} --verbose
